fix navbar alignment

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -4,6 +4,7 @@
   padding: 8px 32px;
   width: 100%;
   position: fixed;
+  top: 0;
 }
 
 #nav-top-link {
@@ -14,16 +15,6 @@
   margin-right: 24px;
 
   &:hover {
-    opacity: 0.7;
-  }
-}
-
-.nav-section-link {
-  text-decoration: none;
-  color: white;
-  
-  &:hover {
-    color: white;
     opacity: 0.7;
   }
 }
